Добавляет базовую структуру главной
Прописываем структуру главной, детально заполняем header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,143 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
+
   <body>
+    <header class="main-header">
+      <div class="container">
+        <nav class="navigation">
+          <a class="header-logo">DEVICE</a>
+          <div class="header-top">
+            <form class="search-form"></form>
+            <ul class="user-navbar">
+              <li class="personal-account">
+                <a href="login.html">
+                  <svg></svg>
+                  "Войти"
+                </a>
+              </li>
+              <li class="compare">
+                <a href="compare.html">
+                  <svg></svg>
+                  "Сравнить"
+                </a>
+              </li>
+              <li class="recycle-bin">
+                <a href="recycle-bin.html">
+                  <svg></svg>
+                  "Корзина"
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="header-bottom">
+            <ul class="site-navbar">
+              <li class="site-navbar-catalog">
+                <a href="catalog.html">"Каталог товаров"</a>
+                <ul class="dropdown">
+                  <li class="dropdown-item">
+                    <a href="catalog.html">"Виртуальная реальность"</a>
+                    <a href="catalog.html">"Моноподы для селфи"</a>
+                    <a href="catalog.html">"Экшн-камеры"</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="catalog.html">"Фитнес-браслеты"</a>
+                    <a href="catalog.html">"Умные часы"</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="catalog.html">"Квадрокоптеры"</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="site-navbar-item">
+                <a href="delivery.html">"Доставка"</a>
+              </li>
+              <li class="site-navbar-item">
+                <a href="guarantee.html">"Гарантия"</a>
+              </li>
+              <li class="site-navbar-item">
+                <a href="contacts.html">"Контакты"</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <main class="main-container main-index">
+      <div class="page-container">
+        <section class="delivery"></section>
+        <section class="about us"></section>
+        <section class="contacts"></section>
+        <section class="subscribe"></section>
+      </div>
+    </main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <!--Футер-->
+    <footer class="page-footer">
+      <div class="footer-container">
+        <div class="logo">
+          <h2 class="visually-hidden">Логотип сайта.</h2>
+          <img class="logo-img" src="" width="" height="" alt="Логотип сайта.">
+          <a class="logo-link" href="index.html">
+        </div>
+        <div class="address">
+          <h2 class="visually-hidden">Адрес.</h2>
+        </div>
+        <div class="footer-menu">
+          <ul class="footer-menu-list">
+            <li class="footer-menu-item">
+              <a class="" href="">
+                Доставка
+              </a>
+            </li>
+            <li class="footer-menu-item">
+              <a class="" href="">
+                Гарантия
+              </a>
+            </li>
+            <li class="footer-menu-item">
+              <a class="" href="">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="socials">
+          <h2 class="visually-hidden">Социальные сети.</h2>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button" href="https://t.me/htmlacademy ">
+                <span class="visually-hidden">Телеграм.</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютуб.</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="button" href="https://twitter.com/htmlacademy_ru">
+                <span class="visually-hidden">Твиттер.</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-contacts">
+          <h2 class="visually-hidden">Контакты.</h2>
+          <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </div>
+        <div class="footer-logo">
+          <h2 class="visually-hidden">Логотип.</h2>
+          <img class="footer-logo-img" src="images/logo-footer.svg" width="115" height="33" alt="Логотип Академия.">
+          <a class="footer-logo-link" href="https://htmlacademy.ru/">
+        </div>
+      </div>
+    </footer>
   </body>
+
 </html>
