Добавляет секции в main
Прописываем 6 секций - доставка, популярные, под заказ, контакты, подписка

--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
     </header>
     <main class="main-container main-index">
       <h1 class="visually-hidden">Интернет-магазин гаджетов "Девайс"</h1>
-      <div class="page-container">
-        <section class="delivery"></section>
-        <section class="about us"></section>
-        <section class="contacts"></section>
-        <section class="subscribe"></section>
+      <section class="slider"></section>
+      <section class="popular"></section>
+      <section class="delivery"></section>
+      <section class="free-to-the-door"></section>
+      <section class="main-contacts"></section>
+      <section class="subscribe"></section>
       </div>
     </main>
 
