Задает три дива в футтер
Размечаем футтер на три дива - лого, адрес и контакты, соц сети

--- a/index.html
+++ b/index.html
@@ -81,15 +81,13 @@
     <!--Футер-->
     <footer class="page-footer">
       <div class="footer-container">
-        <div class="logo">
+        <div class="footer-top">
           <h2 class="visually-hidden">Логотип сайта</h2>
           <img class="logo-img" src="" width="" height="" alt="Логотип сайта.">
           <a class="logo-link" href="index.html">
         </div>
-        <div class="address">
-          <h2 class="visually-hidden">Адрес</h2>
-        </div>
-        <div class="footer-menu">
+        <div class="footer-center">
+          <h2 class="visually-hidden">Адрес и контакты</h2>
           <ul class="footer-menu-list">
             <li class="footer-menu-item">
               <a class="" href="">
@@ -107,8 +105,10 @@
               </a>
             </li>
           </ul>
+          <p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </div>
-        <div class="socials">
+        <div class="footer-bottom">
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
