Добавляет доп див в футтер
Оборачиваем логотип академии в доп див лого

--- a/index.html
+++ b/index.html
@@ -128,10 +128,6 @@
             </li>
           </ul>
         </div>
-        <div class="footer-contacts">
-          <h2 class="visually-hidden">Контакты</h2>
-          <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        </div>
         <div class="footer-logo">
           <h2 class="visually-hidden">Логотип</h2>
           <img class="footer-logo-img" src="images/logo-footer.svg" width="115" height="33" alt="Логотип Академия.">
@@ -139,6 +135,7 @@
         </div>
       </div>
     </footer>
+    <!--Здесь будет модальное окно "Доставка под заказ"-->
   </body>
 
 </html>
