--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
               <li class="personal-account">
                 <a href="login.html">
                   <svg></svg>
-                  "Войти"
+                  Войти
                 </a>
               </li>
               <li class="compare">
                 <a href="compare.html">
                   <svg></svg>
-                  "Сравнить"
+                  Сравнить
                 </a>
               </li>
               <li class="recycle-bin">
                 <a href="recycle-bin.html">
                   <svg></svg>
-                  "Корзина"
+                  Корзина
                 </a>
               </li>
             </ul>
