--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <div class="container">
         <nav class="navigation">
-          <a class="header-logo">DEVICE</a>
+          <a class="header-logo" href="index.html">DEVICE</a>
           <div class="header-top">
             <form class="search-form"></form>
             <ul class="user-navbar">
